address review comments
Signed-off-by: Neeharika-Sompalli <neeharika.sompalli@swirldslabs.com>